Fix contrast color

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -41,6 +41,6 @@
 }
 
 #advantages, #advantages h3 {
-  color: var(--bd500);
+  color: var(--g100);
   text-align: center;
 }
